--- a/clovermind/package.json
+++ b/clovermind/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "d3": "^7.9.0",
+    "d3-tip": "^0.9.1",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
