--- a/clovermind/package.json
+++ b/clovermind/package.json
@@ -19,6 +19,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/d3": "^7.4.3",
+    "@types/d3-tip": "^3.5.8",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
